Functional register and login. Docs service ready

--- a/alright-docs-app/src/app/components/landing/landing.component.html
+++ b/alright-docs-app/src/app/components/landing/landing.component.html
@@ -2,15 +2,14 @@
   <div class="site-page-header-ghost-wrapper">
     <nz-page-header style="background-color: black" [nzGhost]="false">
       <nz-page-header-title style="color: white; cursor: pointer" routerLink="/"
-        >Mantis</nz-page-header-title
+        >Alright</nz-page-header-title
       >
       <nz-page-header-extra>
         <nz-space>
           <a *nzSpaceItem style="color: white">Docs</a>
           <a *nzSpaceItem style="color: white" routerLink="/register"
-            >Sign up</a
+            >Registro</a
           >
-          <a *nzSpaceItem style="color: white">Our project</a>
           <a
             *nzSpaceItem
             style="color: white; text-decoration: underline"
@@ -30,10 +29,10 @@
       style="margin: 8% 0; font-size: 17px; color: #3e3e3e; padding: 24px"
     >
       <p class="cls-open-tag">&#60;body&#62;</p>
-      <h2 style="font-size: 63px; margin: 0">mantis</h2>
+      <h2 style="font-size: 63px; margin: 0">Alright</h2>
       <p class="cls-subtitle">
-        A bug tracker to manage software projects <br />
-        and connect users with developers
+        Un solución digital<br />
+        para gestionar tus documentos legales
       </p>
       <p style="margin-top: 45px">&#60; &#47; body&#62;</p>
     </div>
@@ -42,9 +41,11 @@
       <nz-row>
         <nz-col nzSpan="24">
           <nz-card class="cl-card">
-            <div nzTitle>Create integrations with our api</div>
+            <div nzTitle>Crea integraciones con nuestra API</div>
             <div nzBody>
-              <p>Read our developer docs to connect to our data api.</p>
+              <p>
+                Lee la documentación para conectarte con nuestros servicios.
+              </p>
               <button nz-button nzType="primary">Read docs</button>
             </div>
           </nz-card>
@@ -54,17 +55,24 @@
       <nz-row>
         <nz-col nzSpan="12">
           <nz-card class="cl-card">
-            <div nzTitle>Manage your projects with mantis</div>
+            <div nzTitle>Empieza a gestionar todos tus documentos</div>
             <div nzBody>
               <p>
-                If you are a maker interested in building innovative projects
-                with software solutions use Mantis system
+                Gestiona tus documentos de manera rápida, sencilla y
+                colaborativa
               </p>
               <button nz-button nzType="primary">Get started</button>
             </div>
           </nz-card>
         </nz-col>
 
+        <nz-col nzSpan="12">
+          <img
+            style="width: 200px; height: 200px; margin-bottom: 30px"
+            src="../../../assets/undraw_online_media_re_r9qv.svg"
+          />
+        </nz-col>
+        <!-- 
         <nz-col nzSpan="12">
           <nz-card class="cl-card">
             <div nzTitle>Let's craft and get done your ideas</div>
@@ -76,7 +84,7 @@
               <button nz-button nzType="primary">Write request</button>
             </div>
           </nz-card>
-        </nz-col>
+        </nz-col> -->
       </nz-row>
     </div>
   </div>
