--- a/alright-docs-app/src/app/components/layout/layout.component.html
+++ b/alright-docs-app/src/app/components/layout/layout.component.html
@@ -16,6 +16,7 @@
         </a>
       </div>
 
+      <!-- Menu -->
       <ul
         *ngFor="let menu of profileConfig"
         nz-menu
@@ -23,6 +24,7 @@
         nzMode="inline"
         [nzInlineCollapsed]="isCollapsed"
       >
+        <!-- nzOpen -->
         <li
           nz-submenu
           nzOpen
