--- a/alright-docs-app/src/app/components/register/register.component.html
+++ b/alright-docs-app/src/app/components/register/register.component.html
@@ -7,7 +7,7 @@
       style="font-size: 21px; margin: 12px; cursor: pointer"
       routerLink="/landing"
     ></span>
-    <h1 class="register-title">Register</h1>
+    <h1 class="register-title">Registro</h1>
   </div>
 
   <form nz-form [formGroup]="registerForm" (ngSubmit)="register(registerForm)">
@@ -30,7 +30,7 @@
         "
         nz-form-explain
       >
-        Please enter your name
+        Ingresa tu nombre
       </div>
     </nz-form-item>
 
@@ -54,7 +54,7 @@
         "
         nz-form-explain
       >
-        Please enter your last name
+        Ingresa tu apellido
       </div>
     </nz-form-item>
 
@@ -77,37 +77,8 @@
         "
         nz-form-explain
       >
-        Please enter your email
+        Ingresa tu email
       </div>
-    </nz-form-item>
-
-    <nz-form-item>
-      <nz-form-control>
-        <nz-input-group>
-          <nz-select
-            nzAllowClear
-            formControlName="company"
-            nzPlaceHolder="Choose a company"
-            style="text-align: start"
-          >
-            <ng-container *ngFor="let data of companies">
-              <nz-option [nzValue]="data.cop_code" [nzLabel]="data.cop_name">{{
-                data.cop_name
-              }}</nz-option>
-            </ng-container>
-          </nz-select>
-          <div
-            class="validation-message"
-            *ngIf="
-              registerForm.get('company')!.invalid &&
-              registerForm.get('company')!.touched
-            "
-            nz-form-explain
-          >
-            Please enter your company
-          </div>
-        </nz-input-group>
-      </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
@@ -160,26 +131,20 @@
     </nz-form-item>
 
     <nz-form-item>
-      <button nz-button nzType="primary" class="register-button">
+      <button
+        nz-button
+        [disabled]="registerForm.invalid"
+        nzType="primary"
+        class="register-button"
+      >
         Register
-      </button>
-    </nz-form-item>
-
-    <nz-form-item>
-      <button nz-button nzType="default" nzBlock (click)="registerWithGoogle()">
-        <i nz-icon nzType="google"></i> Register with Google
-      </button>
-      <br />
-      <br />
-      <button nz-button nzType="default" nzBlock (click)="registerWithGitHub()">
-        <i nz-icon nzType="github"></i> Register with GitHub
       </button>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-control>
         <br />
-        <a (click)="goToLogin()">Already have an account!</a>
+        <a (click)="goToLogin()">Ya tengo una cuenta. Entrar!</a>
       </nz-form-control>
     </nz-form-item>
   </form>
