Adding actions log when document is created and sent to revision

--- a/alright-docs-app/src/app/modules/module-docs/doc-list/doc-list.component.html
+++ b/alright-docs-app/src/app/modules/module-docs/doc-list/doc-list.component.html
@@ -58,7 +58,7 @@
               *ngIf="item.state == 'Sin revisar'"
               nz-button
               nz-popover
-              nzPopoverTitle="Seleccionar corrector"
+              nzPopoverTitle="Seleccionar invitado"
               [nzPopoverContent]="selectUser"
               nzPopoverPlacement="right"
               [nzPopoverMouseLeaveDelay]="300"
